[package]
name = "onyxwall"
version = "0.1.0-alpha0"
authors = ["Awayume <dev@awayume.jp>"]
edition = "2021"
rust-version = "1.70"
description = "Crypto assets manager"
readme = "README.md"
repository = "https://github.com/Awayume/onyxwall"
license = "AGPL-3.0-only"
keywords = ["cli", "crypto", "crypto-currencies", "crypto-assets", "bitcoin"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onyxwall-core = { path = "../core", version = "0.1.0-alpha0" }
